# foodgram-project-react

./: README.md  docker-compose.production.yml  docker-compose.yml  setup.cfg  tests.yml
.github/workflows/: main.yml
backend/: Dockerfile  README.md  ingredients.csv  pyproject.toml  requirements.txt
backend/api/: filters.py  permissions.py  recipes_serializers.py  recipes_views.py  serializers.py  urls.py  users_serializers.py  users_views.py  views.py
backend/api/management/commands/: load_ingredients.py
backend/api/recipes/: apps.py  models.py  serializers.py
backend/api/recipes/migrations/: 0005_alter_shoppingcart_managers.py
backend/apps/recipes/: admin.py  filters.py  models.py  permissions.py  serializers.py  views.py
backend/apps/recipes/management/commands/: dbackup.py  load_ingredients.py
backend/apps/recipes/migrations/: 0001_initial.py  0003_shoppingcart_alter_favorite_options_and_more.py  0006_alter_recipeingredient_amount.py  0007_alter_recipeingredient_amount.py  0008_alter_shoppingcart_managers.py  0009_alter_tag_options.py
backend/apps/users/: admin.py  models.py  serializers.py  tests.py  views.py
backend/apps/users/migrations/: 0002_remove_follow_unique_follow_and_more.py
backend/foodgram/: settings.py
backend/recipes/: admin.py  models.py
backend/recipes/management/commands/: load_ingredients.py
backend/recipes/migrations/: 0002_initial.py  0004_alter_tag_options.py
backend/users/: models.py
backend/users/migrations/: 0001_initial.py
infra/: Dockerfile  docker-compose.yml  init-letsencrypt.sh  nginx.conf
