[tool.poetry]
name = "backend"
version = "0.1.0"
description = "foodgram"
authors = ["Kirill Morozov <i@kirill-morozov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "3.7.0"
asgiref = "3.7.2"
astatine = "0.3.2"
astor = "0.8.1"
astpretty = "3.0.0"
astroid = "2.15.5"
asttokens = "2.2.1"
attrs = "23.1.0"
autoflake = "1.7.8"
babel = "2.12.1"
bandit = "1.7.5"
black = "23.3.0"
cachetools = "5.3.1"
certifi = "2023.5.7"
cffi = "1.15.1"
chardet = "5.1.0"
charset-normalizer = "3.1.0"
click = "8.1.3"
cognitive-complexity = "1.3.0"
colorama = "0.4.6"
coverage = "7.2.7"
cryptography = "41.0.1"
darglint = "1.8.1"
defusedxml = "0.7.1"
dill = "0.3.6"
distlib = "0.3.6"
dj-database-url = "2.0.0"
django = "4.2.2"
django-admin = "2.0.2"
django-cuser = "2017.3.16"
django-excel-response2 = "3.0.5"
django-rest-authtoken = "2.1.4"
django-six = "1.0.5"
django-templated-mail = "1.1.1"
django-tinymce = "3.6.1"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
djoser = "2.2.0"
dlint = "0.14.1"
doc8 = "1.1.1"
docformatter = "1.7.2"
docutils = "0.19"
domdf-python-tools = "3.6.1"
eradicate = "2.2.0"
excel-base = "1.0.4"
fastapi = "0.96.0"
filelock = "3.12.0"
gitdb = "4.0.10"
gitpython = "3.1.31"
hypothesis = "6.76.0"
hypothesmith = "0.1.9"
idna = "3.4"
imagesize = "1.4.1"
iniconfig = "2.0.0"
isort = "5.12.0"
isoweek = "1.3.3"
jinja2 = "3.1.2"
jupyterlab-flake8 = "0.7.1"
lark-parser = "0.12.0"
lazy-object-proxy = "1.9.0"
libcst = "0.4.10"
markdown-it-py = "2.2.0"
markupsafe = "2.1.3"
mccabe = "0.7.0"
mdurl = "0.1.2"
modeltranslation = "0.25"
mr-proper = "0.0.7"
mypy-extensions = "1.0.0"
natsort = "8.3.1"
oauthlib = "3.2.2"
packaging = "23.1"
pandas-vet = "0.2.3"
pathspec = "0.11.1"
pbr = "5.11.1"
pep8-naming = "0.13.3"
pillow = "9.5.0"
platformdirs = "3.5.1"
pluggy = "1.0.0"
psycopg2 = "2.9.6"
psycopg2-binary = "2.9.6"
pybetter = "0.4.1"
pycln = "2.1.5"
pycparser = "2.21"
pydantic = "1.10.8"
pydocstyle = "6.3.0"
pyemojify = "0.2.0"
pygments = "2.15.1"
pyjwt = "2.7.0"
pyproject-api = "1.5.1"
pytest = "7.3.1"
pytest-cov = "4.1.0"
pytest-sugar = "0.9.7"
python-dateutil = "2.8.2"
python-decouple = "3.8"
python-dev-tools = "2023.3.24"
python3-openid = "3.2.0"
pytz = "2023.3"
pyupgrade = "3.4.0"
pyyaml = "6.0"
removestar = "1.3.1"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
restructuredtext-lint = "1.4.0"
rich = "13.4.1"
screen = "1.0.1"
six = "1.16.0"
smmap = "5.0.0"
sniffio = "1.3.0"
snowballstemmer = "2.2.0"
social-auth-app-django = "5.2.0"
social-auth-core = "4.4.2"
sortedcontainers = "2.4.0"
sphinx = "6.2.1"
sphinxcontrib-applehelp = "1.0.4"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "2.0.1"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.5"
sqlparse = "0.4.4"
ssort = "0.11.6"
starlette = "0.27.0"
stdlib-list = "0.8.0"
stevedore = "5.1.0"
termcolor = "2.3.0"
timeconvert = "3.0.13"
tokenize-rt = "5.0.0"
tomlkit = "0.11.8"
tox = "4.6.0"
tox-travis = "0.12"
typer = "0.9.0"
typing-inspect = "0.9.0"
typing-extensions = "4.6.3"
tzdata = "2023.3"
tzlocal = "5.0.1"
untokenize = "0.1.1"
urllib3 = "2.0.3"
virtualenv = "20.23.0"
wrapt = "1.15.0"
xlwt = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
